--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/estilos.css">
     <script type="text/javascript" src="js/prefixfree.min.js"></script>
     <title>Landing</title>
 </head>
@@ -12,8 +13,14 @@
     <!-- Encabezado -->
     <header>
         <div class="contenedor">
-
+            <nav class="menu">
+                <a href="#">Inicio</a>
+                <a href="#">Quienes somos</a>
+                <a href="#">Proyectos</a>
+                <a href="#">Contacto</a>
+            </nav>
         </div>
     </header>
+
 </body>
 </html>
