cambio de objetivo, se hace pagina que me ayude a practicar lo aprendio enseñando la teoría y practica

--- a/index.html
+++ b/index.html
@@ -1,26 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/estilos.css" />
     <script type="text/javascript" src="js/prefixfree.min.js"></script>
-    <title>Landing</title>
-</head>
-<body>
+    <title>Aprendiendo HTML y CSS</title>
+  </head>
+  <body>
+
     <!-- Encabezado -->
     <header>
-        <div class="contenedor">
-            <nav class="menu">
-                <a href="#">Inicio</a>
-                <a href="#">Quienes somos</a>
-                <a href="#">Proyectos</a>
-                <a href="#">Contacto</a>
-            </nav>
+      <div class="contenedor">
+        <div class="logo">
+          <img src="./img/logo2.png" alt="logo" />
         </div>
+        <nav class="menu">
+          <a href="#">Inicio</a>
+          <a href="#">HTML</a>
+          <a href="#">CSS</a>
+        </nav>
+      </div>
     </header>
 
-</body>
+    <!-- Sección -->
+    <section>
+        <section class="detallado">
+            <div class=" contenedor">
+                <div class="foto-programando">
+                    <img src="./img/aprendiendo-programación.jpeg" alt="Foto programando">
+                </div>
+
+                <div class="objetivo">
+                    <p>Objetivo</p>
+                    <h3>Practicando</h3>
+                    <p>Una buena manera de aprender y practicar</p>
+                    <p>(Cambiar)Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione repellat, facere aperiam ipsam quos voluptatibus quae maxime fugiat omnis?</p>
+                </div>
+            </div>
+        </section>
+    </section>
+
+  </body>
 </html>
