segunda actualización de la nueva página

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
                 <div class="objetivo">
                     <p>Objetivo</p>
-                    <h3>Practicando</h3>
-                    <p>Una buena manera de aprender y practicar</p>
-                    <p>(Cambiar)Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione repellat, facere aperiam ipsam quos voluptatibus quae maxime fugiat omnis?</p>
+                    <h3>Practicar y Aprender</h3>
+                    <p>Una buena manera de apuntar y registrar lo aprendido</p>
+                    <p>Esta es mi primera página web y estoy muy orgulloso de ella, tuve la mala suerte de perder todos mis apuntes de lo que había aprendido en HTML y CSS, es por eso que decidí hacer esta página para guardar mis apuntes, practicar y para que cualquiera como yo que este aprendiendo pueda usar estos apuntes.</p>
                 </div>
             </div>
         </section>
@@ -48,3 +48,13 @@
 
   </body>
 </html>
+
+<!-- Sección Banner -->
+<section class="banner">
+  <div>
+    <div class="accion-html">
+      <h2>HTML</h2>
+      <a href="#">HTML</a>
+    </div>
+  </div>
+</section>
