corrigiendo imagen del objetivo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="detallado">
             <div class=" contenedor">
                 <div class="foto-programando">
-                    <img src="./img/aprendiendo-programación.jpeg" alt="Foto programando">
+                    <img src="../img/aprendiendo-programación.jpeg" alt="Foto programando">
                 </div>
 
                 <div class="objetivo">
