agregando banner html

--- a/index.html
+++ b/index.html
@@ -50,10 +50,19 @@
 </html>
 
 <!-- Sección Banner -->
-<section class="banner">
+<section class="banner-html">
   <div>
-    <div class="accion-html">
-      <h2>HTML</h2>
+    <div class="contenedor accion-html">
+      <h2>Mis Notas</h2>
+      <a href="#">HTML</a>
+    </div>
+  </div>
+</section>
+
+<section class="banner-css">
+  <div>
+    <div class="contenedor accion-css">
+      <h2>Mis Notas</h2>
       <a href="#">HTML</a>
     </div>
   </div>
