actualización y corrección de clases

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <title>Aprendiendo HTML y CSS</title>
   </head>
   <body>
-
     <!-- Encabezado -->
     <header>
       <div class="contenedor">
@@ -30,41 +29,55 @@
 
     <!-- Sección -->
     <section>
-        <section class="detallado">
-            <div class=" contenedor">
-                <div class="foto-programando">
-                    <img src="../img/aprendiendo-programación.jpeg" alt="Foto programando">
-                </div>
+      <section class="detailed">
+        <div class="contenedor">
+          <div class="programing">
+            <img src="../Landing/img/learning-programing.jpeg" alt="Foto programando">
+          </div>
 
-                <div class="objetivo">
-                    <p>Objetivo</p>
-                    <h3>Practicar y Aprender</h3>
-                    <p>Una buena manera de apuntar y registrar lo aprendido</p>
-                    <p>Esta es mi primera página web y estoy muy orgulloso de ella, tuve la mala suerte de perder todos mis apuntes de lo que había aprendido en HTML y CSS, es por eso que decidí hacer esta página para guardar mis apuntes, practicar y para que cualquiera como yo que este aprendiendo pueda usar estos apuntes.</p>
-                </div>
-            </div>
-        </section>
+          <div class="goal">
+            <p>Objetivo</p>
+            <h3>Practicar y Aprender</h3>
+            <p>Una buena manera de apuntar y registrar lo aprendido</p>
+            <p>
+              Esta es mi primera página web y estoy muy orgulloso de ella, tuve
+              la mala suerte de perder todos mis apuntes de lo que había
+              aprendido en HTML y CSS, es por eso que decidí hacer esta página
+              para guardar mis apuntes, practicar y para que cualquiera como yo
+              que este aprendiendo pueda usar estos apuntes.
+            </p>
+          </div>
+        </div>
+      </section>
+    </section>
+    <!-- Sección Banner -->
+    <section class="banner__primary">
+      <div>
+        <div class="contenedor action">
+          <h2>Mis Apuntes</h2>
+          <a href="#">HTML</a>
+        </div>
+      </div>
     </section>
 
+    <section class="banner__secundary">
+      <div>
+        <div class="contenedor action">
+          <h2>Mis Apuntes</h2>
+          <a href="#">CSS</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Sección pie de página -->
+    <section>
+      <div class="top__footer"></div>
+    </section>
+    <section>
+      <div class="center__footer"></div>
+    </section>
+    <section>
+      <div class="bottom__footer"></div>
+    </section>
   </body>
 </html>
-
-<!-- Sección Banner -->
-<section class="banner-html">
-  <div>
-    <div class="contenedor accion-html">
-      <h2>Mis Notas</h2>
-      <a href="#">HTML</a>
-    </div>
-  </div>
-</section>
-
-<section class="banner-css">
-  <div>
-    <div class="contenedor accion-css">
-      <h2>Mis Notas</h2>
-      <a href="#">HTML</a>
-    </div>
-  </div>
-</section>
-
